Minor CSS fix for systemid change/cancel button alignment
git-svn-id: http://public-cvs.squiz.net/svn/squiz-framework@846 1b08cf3a-d8dc-418b-9366-0d0b919357ef

--- a/Systems/Patching/Web/Templates/PatchingScreen.css
+++ b/Systems/Patching/Web/Templates/PatchingScreen.css
@@ -11,6 +11,10 @@
     float: left;
 }
 
+.PatchingScreen-activateWrap-right {
+    float: right;
+}
+
 /* System ID section */
 .PatchingScreen-activateWrap.hidden {
     display: none;
@@ -30,10 +34,6 @@
 
 #PatchingScreen-systemidWrap {
     line-height: 22px;
-}
-
-#PatchingScreen-changeIdBtn {
-    margin: 0 0 0 24px;
 }
 
 #PatchingScreen-cancelChangeBtn {
